name:               hasklime
version:            0
license:            GPL-3
license-file:       LICENSE
author:             Ole Krueger
maintainer:         ole@vprsm.de
build-type:         Simple
cabal-version:      >= 2

library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unused-do-bind -Wno-name-shadowing
  build-depends:    base, aeson, bytestring, transformers, data-default
  hs-source-dirs:   lib
  exposed-modules:  HaskLime.Plugin
                    HaskLime.C
  other-modules:    HaskLime.Thread

foreign-library hasklime-example
  type:             native-shared
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-name-shadowing
  build-depends:    base, hasklime
  hs-source-dirs:   src
  other-modules:    Example
  c-sources:        cbits/rts.c
