name:               hasklime
version:            0
license:            GPL-3
license-file:       LICENSE
author:             Ole Krueger
maintainer:         ole@vprsm.de
build-type:         Simple
cabal-version:      >= 2

library
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-unused-do-bind -Wno-name-shadowing
  build-depends:    base, aeson, bytestring, template-haskell
  hs-source-dirs:   lib
  exposed-modules:  HaskLime
                    HaskLime.Exports
                    HaskLime.Interface
                    HaskLime.TH
                    HaskLime.Procedure
