name:               hasklime-example
version:            0
license:            GPL-3
license-file:       LICENSE
author:             Ole Krueger
maintainer:         ole@vprsm.de
build-type:         Simple
cabal-version:      >= 2

foreign-library hasklime-example
  type:             native-shared
  default-language: Haskell2010
  ghc-options:      -Wall -Wno-name-shadowing -threaded
  extra-libraries:  HSrts_thr-ghc8.2.2
  build-depends:    base, hasklime, bytestring
  hs-source-dirs:   src
  other-modules:    Example
  c-sources:        cbits/rts.c
